fixed alignment of loading page and title capitalization on graph page

--- a/src/styles/_graphs.scss
+++ b/src/styles/_graphs.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     gap: 2em;
     min-height: 80vh;
     h2 {
